デザインとか？

--- a/colamone_vs.html
+++ b/colamone_vs.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" type="text/css" href="boardgame.css">
         <script src="https://skyway.io/dist/0.3/peer.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-        <script type="text/javascript" src="boardgame_vs.js"></script>
+        <script type="text/javascript" src="boardgame_vs.js?20140626"></script>
         <script type="text/javascript">
 var peer;
             function get_lang() {
@@ -48,7 +48,7 @@ var peer;
             }
         </script>
     </HEAD>
-    <BODY onLoad="set_manual();">
+    <BODY onLoad="set_manual();" class="body_1">
         <div id="main">
             <canvas id="canv" width="500px" height="500px"></canvas>
             <div id="message">
